# interview-agent

./: .env.example  .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  pyproject.toml
src/interview_agent/: __init__.py  main.py
src/interview_agent/api/: __init__.py  health.py
src/interview_agent/core/: __init__.py  config.py  logging.py
src/interview_agent/retrieval/: __init__.py  chunking.py  front_matter.py  indexing.py  markdown.py
src/interview_agent/storage/: __init__.py  index_state.py  sqlite.py
tests/: test_chunking.py  test_config.py  test_front_matter.py  test_health.py  test_index_state.py  test_indexing.py  test_markdown.py  test_sqlite.py
